# narrative-reframing-agent

./: README.md  pyproject.toml
examples/: sample_narrative.txt  sample_output.json
src/narrative_reframing_agent/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
