[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-reframing-agent"
version = "0.1.0"
description = "Research prototype for structured narrative reframing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
narrative-reframing-agent = "narrative_reframing_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
